# tg_anki_app

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/app/: main.py
api/app/api/: deps.py
api/app/core/: config.py  logging.py  security.py
api/app/db/: models.py  session.py
api/app/schemas/: file.py  job.py  topic.py
api/app/services/: cache.py  celery_app.py  chunking.py  clamav.py  dedupe.py  exporter.py  extraction.py  metrics_report.py  rate_limit.py  storage.py  topics.py  validation.py
api/tests/: conftest.py  test_admin.py  test_auth.py  test_dedupe.py  test_topics.py  test_validation.py  utils.py
bot/app/: config.py  handlers.py  keyboards.py  main.py
docs/: dokploy.md
infra/: Dockerfile.api  Dockerfile.bot  Dockerfile.web  Dockerfile.worker  alembic.ini  nginx.web.conf  requirements-api.txt  requirements-bot.txt  requirements-worker.txt
infra/migrations/: env.py
infra/migrations/versions/: 0001_init.py  0002_add_job_metrics_json.py
scripts/: generation_benchmark_run.py  generation_metrics_report.py  start_localhostrun.sh  start_localtunnel.sh  start_named_tunnel.sh  start_ngrok.sh  start_tunnel.sh
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  telegram.ts
web/src/api/: client.ts  http.ts  types.ts
web/src/components/: DebugPanel.tsx
web/src/hooks/: useAutoDismiss.ts  useTelegramAuth.ts
web/src/pages/: GenerationPage.tsx  (+2 more)
worker/: celery_app.py  job_runner.py  tasks.py
(+15 files in other folders)
