[project]
name = "codex-anki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiogram==3.4.1",
    "aiosqlite==0.19.0",
    "asyncpg==0.29.0",
    "celery==5.3.6",
    "cryptography==42.0.2",
    "fastapi==0.110.0",
    "httpx==0.27.0",
    "langchain-core>=0.3,<0.4",
    "langchain-google-genai>=2.0.0,<3.0",
    "langchain-chroma>=0.2.0,<0.3",
    "chromadb>=0.5.0,<0.6",
    "sentence-transformers==2.7.0",
    "passlib[bcrypt]==1.7.4",
    "prometheus-client==0.20.0",
    "pyclamd==0.4.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.2.1",
    "pymupdf==1.24.2",
    "pytest==8.0.2",
    "python-docx==1.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "pytest-asyncio==0.23.5",
    "redis==5.0.1",
    "ruff==0.2.1",
    "sqlalchemy[asyncio]==2.0.27",
    "structlog==24.1.0",
    "uvicorn[standard]==0.27.1",
]
